horizontal scroll fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,7 +139,7 @@ body {
   .card {
     width: 162.59px !important; /* Adjust the width to be a percentage of the screen */
     margin: 10px;
-    height: 236.8px !important; /* Smaller margin on mobile */
+    height: 350px !important;
   }
   .card-image {
     width: 100%;
@@ -480,7 +480,9 @@ body {
 }
 .theme-black {
   transition: all 1s ease;
-  background-color: black;
+  /* background-color: black;
+  transition: all 1s ease; */
+  background-color: #d9d9d9;
 }
 .circle-container {
   padding-left: 30px;
@@ -635,6 +637,21 @@ body {
   top: 15%;
   left: 30%;
 }
+@media (max-width: 1200px) {
+  .horiztonal-desc {
+    position: absolute;
+    top: 0%;
+    left: 5%;
+  }
+  .hori-f4 {
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    font-weight: 700;
+    line-height: 1.3rem;
+    letter-spacing: -0.06em;
+    text-align: left;
+  }
+}
 .horizontal-imgs {
   z-index: 5;
 }
@@ -656,14 +673,14 @@ body {
   position: absolute;
   max-width: 50%;
   max-height: auto;
-  top: 73%;
-  left: 33%;
+  top: 80%;
+  left: 35%;
 }
 .horizontal-img-cont4 {
   position: absolute;
   max-width: 50%;
   max-height: auto;
-  top: -3%;
+  top: -10%;
   left: 36%;
 }
 .horizontal-img-cont5 {
